asset: Update author about page

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,16 +1,16 @@
 ---
-name: Tails Azimuth
-avatar: /static/images/avatar.png
-occupation: Professor of Atmospheric Science
-company: Stanford University
-email: address@yoursite.com
-twitter: https://twitter.com/Twitter
-linkedin: https://www.linkedin.com
-github: https://github.com
+name: Trillium Smith
+avatar: /static/images/avatar.png   
+occupation: Software Engineer
+company: HackForLA
+email: 'trillium@hatsfabulous.com'
+# twitter: https://twitter.com/Twitter
+linkedin: https://www.linkedin.com/in/trilliumsmith/
+github: 'https://github.com/spiteless'
 ---
 
-Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
+Trillium Smith is a self-taught software developer based out of the Los Angeles area, speicalizing in building full stack web applications in React, utilizing resoureces like Tailwind, NextJs, and Typescript.
 
-He leads the clean energy group which develops 3D air pollution-climate models, writes differential equation solvers, and manufactures titanium plated air ballons. In his free time he bakes raspberry pi.
+He's the current Lead Developer for VRMS (Volunteer Relationship Management System).
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.
+Outside of software development, Trillium is also an accomplished massage therpaist, partner dancer, and crafter of curated dad jokes.
