--- a/data/blog/talon-voice-the-start-of-the-journey.mdx
+++ b/data/blog/talon-voice-the-start-of-the-journey.mdx
@@ -12,7 +12,7 @@ authors: ['default']
 <!-- ![confused-turtle](/static/images/turtle.jpg) -->
 ![confused-sloth](/static/images/sloth.jpg)
 
-# Talon voice, a voice based accessability software
+# Talon Voice, the Start of the Journey
 
 Talon Voice is a voice-based accessibility software allowing users to control their computer using their voice. This can be particularly useful for individuals with physical disabilities that prevent them from using traditional input methods like a keyboard or mouse. Talon Voice also offers benefits in shifting one's ability of controlling a computer to away from the desk/chair.
 
