asset: Update publish date, draft state for blogs

--- a/data/blog/talon-voice-the-start-of-the-journey.mdx
+++ b/data/blog/talon-voice-the-start-of-the-journey.mdx
@@ -1,9 +1,9 @@
 ---
 title: Talon Voice, the Start of the Journey
-date: '2021-01-12'
+date: '2024-02-19'
 lastmod: '2021-02-01'
 tags: ['Talon Voice']
-draft: true
+draft: false
 summary: "Embarking on the journey of coding by voice"
 images: ['/static/images/turtle.jpg', '/static/images/canada/toronto.jpg']
 authors: ['default']
