asset: Update title coding by voice -> Voice Coding

--- a/data/blog/talon-voice-the-start-of-the-journey.mdx
+++ b/data/blog/talon-voice-the-start-of-the-journey.mdx
@@ -4,7 +4,7 @@ date: '2024-02-19'
 lastmod: '2021-02-01'
 tags: ['Talon Voice']
 draft: false
-summary: "Embarking on the journey of coding by voice"
+summary: "Embarking on the journey of Voice Coding"
 images: ['/static/images/turtle.jpg', '/static/images/canada/toronto.jpg']
 authors: ['default']
 ---
