asset: Update email @hatsfabulous.com -> @trilliumsmith.com

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -3,7 +3,7 @@ name: Trillium Smith
 avatar: /static/images/avatar.png   
 occupation: Software Engineer
 company: HackForLA
-email: 'trillium@hatsfabulous.com'
+email: 'trillium@trilliumsmith.com'
 # twitter: https://twitter.com/Twitter
 linkedin: https://www.linkedin.com/in/trilliumsmith/
 github: 'https://github.com/spiteless'
