fix: Typo resources

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -9,7 +9,7 @@ linkedin: https://www.linkedin.com/in/trilliumsmith/
 github: 'https://github.com/spiteless'
 ---
 
-Trillium Smith is a self-taught software developer based out of the Los Angeles area, speicalizing in building full stack web applications in React, utilizing resoureces like Tailwind, NextJs, and Typescript.
+Trillium Smith is a self-taught software developer based out of the Los Angeles area, speicalizing in building full stack web applications in React, utilizing resources like Tailwind, NextJs, and Typescript.
 
 He's the current Lead Developer for VRMS (Volunteer Relationship Management System).
 
