--- a/data/blog/talon-voice-the-start-of-the-journey.mdx
+++ b/data/blog/talon-voice-the-start-of-the-journey.mdx
@@ -11,7 +11,7 @@ authors: ['default']
 
 ![confused-sloth](/static/images/sloth.jpg)
 
-My initial interest in Talon Voice has always had a little bit to do with sloth-like behavior and an obsession to be able to use my computer's full functionality from bed. Before moving to Apple devices, I prioirtized buying 2-in-1 tablet PC's to be able to use them in tablet mode from the comfot of soft cushy coveres. This worked great, provided I never needed to use a keyboard or mouse and could get by with a touch screen (which really only worked with browsing the web at best).
+My initial interest in Talon Voice has always had a little bit to do with sloth-like behavior and an obsession to be able to use my computer's full functionality from bed. Before moving to Apple devices, I prioritized buying 2-in-1 tablet PC's to be able to use them in tablet mode from the comfort of soft cushy covers. This worked great, provided I never needed to use a keyboard or mouse and could get by with a touch screen (which really only worked with browsing the web at best).
 
 I've always been a frequent user of the cellphone voice assistant features, and voice to text transcription, so figuring out a way to use my computer by voice too wasn't that much of a logical leap. Enter: Talon Voice.
 
@@ -58,7 +58,7 @@ For starters, the whole alphabet has to be relearned:
 | Y | Yank | 
 | Z | Zip | 
 
-Too many words in the English alphabet rhyme with eachother, making voice disambiguation difficult.
+Too many words in the English alphabet rhyme with each other, making voice disambiguation difficult.
 
 ```text
 Letters with an -ee sound rhyme: 
@@ -81,24 +81,24 @@ This worked out _okay_, but was ultimately not a great fit due to my computer se
 
 ## 2023 - Buying too many useless things
 
-At this point I had recently purhcased a used MacBook Pro M1 hoping that switching to Apple devices would lessen my headache of getting into software development. I continued to try a few different microphones and accessories:
+At this point I had recently purchased a used MacBook Pro M1 hoping that switching to Apple devices would lessen my headache of getting into software development. I continued to try a few different microphones and accessories:
 
 - [Audio-Technica PRO 92cW-TH](https://www.amazon.com/gp/product/B0013UOKB6/ref=ppx_yo_dt_b_search_asin_title?ie=UTF8&th=1) -- First omnidirectional mic
 - [Rode Wireless Go II](https://www.amazon.com/gp/product/B08XFQ6KP9/ref=ppx_yo_dt_b_search_asin_title?ie=UTF8&th=1) -- Wireless pack
 - [Powered XLR Female to 3.5mm](https://www.amazon.com/gp/product/B07J5QT23H/ref=ppx_yo_dt_b_search_asin_title?ie=UTF8&psc=1) -- For adapting the old microphone port to powered XLR
 - [3.5mm Male to XLR Female](https://www.amazon.com/gp/product/B07FZJ9325/ref=ppx_yo_dt_b_search_asin_title?ie=UTF8&psc=1) -- To use the line-in port on the Rode
 
-I ended up buying a few other odds and ends here and there, but ulimtately thought I needed an even better microphone due to my audio not recognizing in Talon very well.
+I ended up buying a few other odds and ends here and there, but ultimately thought I needed an even better microphone due to my audio not recognizing in Talon very well.
 
 ## 2024
 
 This is the year that I finally got to actually practice using Talon. I had finally signed a lease and no longer needed to house hop, I got a [Giant TV](https://www.amazon.com/gp/product/B0BTTTWHBW/ref=ppx_yo_dt_b_search_asin_image?ie=UTF8&psc=1), a used rowing machine, and then I was off to the races!
 
-All the cords accessories felt really cumborsome, and I really wanted to be able to use my voice to navigate my computer and row at the same time, or fold laundry, or just laze on my bed in whatever position fent comfy. I ended up buying a few more odds and ends like a fanny pack to house all the cables and equipment, but ultimately in a fit of annoyance I just tried the onboard mic the Rode II Go has fastened to a baseball cap.
+All the cords accessories felt really cumbersome, and I really wanted to be able to use my voice to navigate my computer and row at the same time, or fold laundry, or just laze on my bed in whatever position fent comfy. I ended up buying a few more odds and ends like a fanny pack to house all the cables and equipment, but ultimately in a fit of annoyance I just tried the onboard mic the Rode II Go has fastened to a baseball cap.
 
 ## 2024 - Finally...
 
-Turns out all that info was incorrect, the only piece of equipment I really needed was the Rode II Go with it's onboard lavalier mic. Just those two simple items were enough to get crackin' as long as the mic is placed in front of your face consistently.
+Turns out all that info was incorrect, the only piece of equipment I really needed was the Rode II Go with its onboard lavalier mic. Just those two simple items were enough to get crackin' as long as the mic is placed in front of your face consistently.
 
 As of now my current set up is:
 
@@ -114,7 +114,7 @@ It's a daily journey, and I am actively working on giving myself better tools to
 
 ## What's next
 
-If you'd like to take some of this journey yourself, Talon Voice has a free version, and a private paid beta that can be joined for a monthy fee.
+If you'd like to take some of this journey yourself, Talon Voice has a free version, and a private paid beta that can be joined for a monthly fee.
 
 - [Talon Voice Website](https://talonvoice.com/)
   - [Talon Voice Slack Channel](https://talonvoice.com/chat)
@@ -125,4 +125,4 @@ If you'd like to take some of this journey yourself, Talon Voice has a free vers
 
 I didn't really get into exactly how Talon Voice or the community curated grammer do what they do, I'll detail that in a later post.
 
-I'd also really like to provide a video of what rowing and voice coiding looks like. When I finally get that made, I'll update this post :)
+I'd also really like to provide a video of what rowing and voice coding looks like. When I finally get that made, I'll update this post :)
