--- a/data/blog/remote-desktop-with-cellphone.mdx
+++ b/data/blog/remote-desktop-with-cellphone.mdx
@@ -12,19 +12,19 @@ All those things are reasonable options, but one more thing that might be worth 
 
 ## Chrome Remote Desktop
 
-Google developed a nice Remote Desktop application that is completely free (for now and hopefully forever please Google) and has both a mobile/tablet application and a corresponding desktop application. has a handy dandy featue that easily lets you remote desktop from one device to another. It's aptly named Chrome Remote Desktop, and with the accompanying mobile app for both iPhone and Android, you can add desktop/laptop devices to your Google Profile (connected to an email), and control them from any device logged into Chrome Remote Desktop.
+Google developed a nice Remote Desktop application that is completely free (for now and hopefully forever please Google) and has both a mobile/tablet application and a corresponding desktop application. has a handy dandy feature that easily lets you remote desktop from one device to another. It's aptly named Chrome Remote Desktop, and with the accompanying mobile app for both iPhone and Android, you can add desktop/laptop devices to your Google Profile (connected to an email), and control them from any device logged into Chrome Remote Desktop.
 
 
 ## Getting started 
 
-Once you ahve both installed the mobile and desktop app, your computer you intend to share (your desktop in this case) needs to be configured within the desktop version of Chrome Remote Desktop. Both these devices need to be logged in with the same Google credentials. You will be prompted to create a pin number for easier account access, and (at the time of writing) this pin number has to be at least 6 digits.
+Once you have both installed the mobile and desktop app, your computer you intend to share (your desktop in this case) needs to be configured within the desktop version of Chrome Remote Desktop. Both these devices need to be logged in with the same Google credentials. You will be prompted to create a pin number for easier account access, and (at the time of writing) this pin number has to be at least 6 digits.
 
-You will also be asked to create a name for your computer. This name will show up in various versions of the rmote desktop app.
+You will also be asked to create a name for your computer. This name will show up in various versions of the remote desktop app.
 
 Once that's finished, open up the mobile version of Chrome Remote Desktop, making sure to use the same Google Credentials (I have maybe 4 different Google accounts on my phone...). Your computer's screen should show up at this point, tap the device name, input your pin number, and behold! You can now control your computer's mouse in Track-pad mode!
 
 ## Remote Desktop and Talon Voice
 
-If you're a Talon Vocie user, there are many differnt avenues to control the mouse location on your computer by voice. If using a touchpad is appropriate for your body mobility level, provided you have a decent internet connection the latency for moving the mouse and seeing the results on a monitor is sufficient.
+If you're a Talon Voice user, there are many different avenues to control the mouse location on your computer by voice. If using a touchpad is appropriate for your body mobility level, provided you have a decent internet connection the latency for moving the mouse and seeing the results on a monitor is sufficient.
 
 Voila, you can now use your phone as a touchpad for your computer!
