fix: Typo fent --> feels

--- a/data/blog/talon-voice-the-start-of-the-journey.mdx
+++ b/data/blog/talon-voice-the-start-of-the-journey.mdx
@@ -5,7 +5,7 @@ lastmod: '2021-02-01'
 tags: ['Talon Voice']
 draft: false
 summary: "Embarking on the journey of Voice Coding"
-images: ['/static/images/turtle.jpg', '/static/images/canada/toronto.jpg']
+images: ['/static/images/turtle.jpg']
 authors: ['default']
 ---
 
@@ -94,7 +94,7 @@ I ended up buying a few other odds and ends here and there, but ultimately thoug
 
 This is the year that I finally got to actually practice using Talon. I had finally signed a lease and no longer needed to house hop, I got a [Giant TV](https://www.amazon.com/gp/product/B0BTTTWHBW/ref=ppx_yo_dt_b_search_asin_image?ie=UTF8&psc=1), a used rowing machine, and then I was off to the races!
 
-All the cords accessories felt really cumbersome, and I really wanted to be able to use my voice to navigate my computer and row at the same time, or fold laundry, or just laze on my bed in whatever position fent comfy. I ended up buying a few more odds and ends like a fanny pack to house all the cables and equipment, but ultimately in a fit of annoyance I just tried the onboard mic the Rode II Go has fastened to a baseball cap.
+All the cords accessories felt really cumbersome, and I really wanted to be able to use my voice to navigate my computer and row at the same time, or fold laundry, or just laze on my bed in whatever position feels comfy. I ended up buying a few more odds and ends like a fanny pack to house all the cables and equipment, but ultimately in a fit of annoyance I just tried the onboard mic the Rode II Go has fastened to a baseball cap.
 
 ## 2024 - Finally...
 
