--- a/data/blog/piping_mimic_commands_to_talon.mdx
+++ b/data/blog/piping_mimic_commands_to_talon.mdx
@@ -21,7 +21,7 @@ function m() {
       command="${command%"${command##*[![:space:]]}"}"
       echo "mimic(\"${command}\")"| $TALON_REPL_PATH > /dev/null
       echo "actions.sleep(.05)"| $TALON_REPL_PATH > /dev/null
-      command="" 
+      command=""
     else
       command="$command $word"
     fi
@@ -40,14 +40,15 @@ function M() {
 
 In order to work, `$TALON_REPL_PATH` needs to be defined earlier else in your `.bashrc`
 
-## What does m do?
+## What does m do? (lowercase)
 
 `m` is a function that pipes a sentence into mimic, splitting commands on period `.` and comma `,`. It does this via looping over the stored arguments in `$@`, which will be every space separated word in the entered line.
 
 The command `m focus chrome, go tab one` will split into the follow parts:
- - `m`: The function being executed
- - `focus chrome,`: The first phrase being examined by the script
- - `go tab one`: The second phrase being examined by the script
+
+- `m`: The function being executed
+- `focus chrome,`: The first phrase being examined by the script
+- `go tab one`: The second phrase being examined by the script
 
 In the above example, `focus chrome,` has a trailing comma, this is used to separate commands. `focus chrome,` will be split into `focus chrome` and a short sleep. The mimic command only accepts strings of words Talon Voice understands, so for example mimic will fail with numbers e.g. `1` but would accept strings representing numbers e.g. `one`. Additional characters like punctuation tend to also break `mimic`, so when using this script I don't use them.
 
@@ -71,7 +72,7 @@ function m() {
       echo "mimic(\"${command}\")"| $TALON_REPL_PATH > /dev/null
       # Pipe a short sleep between each command
       echo "actions.sleep(.05)"| $TALON_REPL_PATH > /dev/null
-      command="" 
+      command=""
     # if no , or . are found in the argument
     # append the argument to the command
     else
@@ -81,20 +82,21 @@ function m() {
   # Run the last saved command
   echo "mimic(\"${command/ /}\")"| $TALON_REPL_PATH > /dev/null
 }
-``` 
+```
 
 ### What's with the > /dev/null
 
 This just mutes return statements from the repl so that noise won't pollute the terminal as I'm working.
 
-## What does M do
+## What does M do? (uppercase)
 
 `M` is a helper function that automatically returns to the last used window. This makes it easy to run a short command e.g. `tab search, word github, south, lap`. In my repo that would execute in order:
- - `command tab` to switch windows. Chrome is the assumed window in this case
- - `tab search` to run the command to search open tabs
- - `word github` to type github into the search
- - `south` to press the down arrow
- - `lap` to press enter, and now we'd on a github tab
+
+- `command tab` to switch windows. Chrome is the assumed window in this case
+- `tab search` to run the command to search open tabs
+- `word github` to type github into the search
+- `south` to press the down arrow
+- `lap` to press enter, and now we'd on a github tab
 
 ```bash
 function M() {
@@ -112,7 +114,7 @@ function M() {
 }
 ```
 
- (Note: it's hard coded for mac at the moment but mimicking `command tab` so if that doesn't switch to your last window in your OS it will need updating).
+(Note: it's hard coded for mac at the moment but mimicking `command tab` so if that doesn't switch to your last window in your OS it will need updating).
 
 ## When is this actually a terrible choice to test something
 
