feat: Create author `trilliumsmith`

--- a/data/blog/piping_mimic_commands_to_talon.mdx
+++ b/data/blog/piping_mimic_commands_to_talon.mdx
@@ -4,6 +4,7 @@ date: '2024-03-11'
 tags: ['Talon Voice', 'Terminal']
 draft: false
 summary: Quick and dirty terminal function for using Talon's mimic( )
+authors: ['trilliumsmith']
 ---
 
 Talon Voice has an inbuilt `mimic` function that lets the user test commands. This is a feature I use fairly regularly when I'm in a space with too much background talking, or I just want to test something.
