style: Run linting across repo files

--- a/data/blog/talon-voice-the-start-of-the-journey.mdx
+++ b/data/blog/talon-voice-the-start-of-the-journey.mdx
@@ -4,7 +4,7 @@ date: '2024-02-19'
 lastmod: '2021-02-01'
 tags: ['Talon Voice']
 draft: false
-summary: "Embarking on the journey of Voice Coding"
+summary: 'Embarking on the journey of Voice Coding'
 images: ['/static/images/turtle.jpg']
 authors: ['default']
 ---
@@ -29,39 +29,39 @@ Even after viewing Emily's talk, using Talon was still more of an aspiration. Go
 
 For starters, the whole alphabet has to be relearned:
 
-| Letter | Talon Name 
-| ---- | ----  
-| A | Air | 
-| B | Bat | 
-| C | Cap | 
-| D | Drum | 
-| E | Each | 
-| F | Fine | 
-| G | Gust | 
-| H | Harp | 
-| I | Sit | 
-| J | Jury | 
-| K | Crunch | 
-| L | Look | 
-| M | Made | 
-| N | Near | 
-| O | Odd | 
-| P | Pit | 
-| Q | Quench | 
-| R | Red | 
-| S | Sun | 
-| T | Trap | 
-| U | Urge | 
-| V | Vest | 
-| W | Whale | 
-| X | Plex | 
-| Y | Yank | 
-| Z | Zip | 
+| Letter | Talon Name |
+| ------ | ---------- |
+| A      | Air        |
+| B      | Bat        |
+| C      | Cap        |
+| D      | Drum       |
+| E      | Each       |
+| F      | Fine       |
+| G      | Gust       |
+| H      | Harp       |
+| I      | Sit        |
+| J      | Jury       |
+| K      | Crunch     |
+| L      | Look       |
+| M      | Made       |
+| N      | Near       |
+| O      | Odd        |
+| P      | Pit        |
+| Q      | Quench     |
+| R      | Red        |
+| S      | Sun        |
+| T      | Trap       |
+| U      | Urge       |
+| V      | Vest       |
+| W      | Whale      |
+| X      | Plex       |
+| Y      | Yank       |
+| Z      | Zip        |
 
 Too many words in the English alphabet rhyme with each other, making voice disambiguation difficult.
 
 ```text
-Letters with an -ee sound rhyme: 
+Letters with an -ee sound rhyme:
   B C D E G P T V Z
 
 Letters with an -ay sound rhyme:
@@ -121,7 +121,7 @@ If you'd like to take some of this journey yourself, Talon Voice has a free vers
 - [Talon Community Github](https://github.com/talonhub/community/)
 - [Talon Wiki](https://talon.wiki/)
 
-## Additional odds and ends 
+## Additional odds and ends
 
 I didn't really get into exactly how Talon Voice or the community curated grammer do what they do, I'll detail that in a later post.
 
