feat: Rename all instances of spiteless to trilliumsmith

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -6,7 +6,7 @@ company: HackForLA
 email: 'trillium@trilliumsmith.com'
 # twitter: https://twitter.com/Twitter
 linkedin: https://www.linkedin.com/in/trilliumsmith/
-github: 'https://github.com/spiteless'
+github: 'https://github.com/trilliumsmith'
 ---
 
 Trillium Smith is a self-taught software developer based out of the Los Angeles area, speicalizing in building full stack web applications in React, utilizing resources like Tailwind, NextJs, and Typescript.
