--- a/data/authors/trilliumsmith.mdx
+++ b/data/authors/trilliumsmith.mdx
@@ -6,7 +6,7 @@ company: HackForLA
 email: 'trillium@trilliumsmith.com'
 # twitter: https://twitter.com/Twitter
 linkedin: https://www.linkedin.com/in/trilliumsmith/
-github: 'https://github.com/spiteless'
+github: 'https://github.com/trilliumsmith'
 ---
 
 # This is a duplicate
