feat: Update avatar photo, add trilliumsmith.jpg

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,6 +1,6 @@
 ---
 name: Trillium Smith
-avatar: /static/images/avatar.png
+avatar: /static/images/avatar.jpg
 occupation: Software Engineer
 company: HackForLA
 email: 'trillium@trilliumsmith.com'
