--- a/data/authors/trilliumsmith.mdx
+++ b/data/authors/trilliumsmith.mdx
@@ -1,6 +1,6 @@
 ---
 name: Trillium Smith
-avatar: /static/images/avatar.png
+avatar: /static/images/trilliumsmith.jpg
 occupation: Software Engineer
 company: HackForLA
 email: 'trillium@trilliumsmith.com'
