--- a/data/authors/trilliumsmith.mdx
+++ b/data/authors/trilliumsmith.mdx
@@ -5,6 +5,7 @@ occupation: Software Engineer
 company: HackForLA
 email: 'trillium@trilliumsmith.com'
 # twitter: https://twitter.com/Twitter
+bluesky: https://bsky.app/profile/trilliumsmith.bsky.social
 linkedin: https://www.linkedin.com/in/trilliumsmith/
 github: 'https://github.com/trillium'
 ---
