chore: Change pair-amind blog image container to div

--- a/data/blog/The_pair-amid_scheme.mdx
+++ b/data/blog/The_pair-amid_scheme.mdx
@@ -22,6 +22,6 @@ www.trillium.is/pair (or www.trillium.is/🍐 which is the same link but more hi
 
 Looking forward to pairing with you soon!
 
-<p class="flex justify-center rounded-md border">
+<div class="flex justify-center rounded-md border">
   ![Screenshot of Ben and Trillium on Zoom](/static/images/pairamid_scheme/01.webp)
-</p>
+</div>
