feat: Update pair-amid scheme blog post

--- a/data/blog/The_pair-amid_scheme.mdx
+++ b/data/blog/The_pair-amid_scheme.mdx
@@ -21,6 +21,11 @@ www.trillium.is/pair (or www.trillium.is/🍐 which is the same link but more hi
 
 Looking forward to pairing with you soon!
 
-<div class="flex justify-center rounded-md border">
-  ![Screenshot of Ben and Trillium on Zoom](/static/images/pairamid_scheme/01.webp)
+<div className="grid grid-cols-2 justify-center gap-4 rounded-md border p-4">
+  <div className="flex h-full w-auto flex-grow items-center overflow-hidden rounded-md">
+    ![Screenshot of Daniel and Trillium on Google Meet](/static/images/pairamid_scheme/02.webp)
+  </div>
+  <div className="flex h-full w-auto flex-grow items-center overflow-hidden rounded-md">
+    ![Screenshot of Ben and Trillium on Zoom](/static/images/pairamid_scheme/01.webp)
+  </div>
 </div>
