feat: Add call-to-action button in pairing-magic

--- a/data/blog/pairing-magic.mdx
+++ b/data/blog/pairing-magic.mdx
@@ -29,3 +29,13 @@ Looking forward to pairing with you soon!
     ![Screenshot of Ben and Trillium on Zoom](/static/images/pairamid_scheme/01.webp)
   </div>
 </div>
+
+<div className="flex w-full justify-center py-4">
+  <a className="group" href="https://www.trillium.is/pair" target="_blank">
+    <button class="cursor-pointer rounded-2xl bg-gradient-to-r from-blue-500 to-purple-500 p-0.5 font-semibold text-white">
+      <span className="flex w-full rounded-2xl bg-white px-4 text-3xl text-black transition-colors group-hover:bg-primary-400 dark:bg-gray-950 dark:text-white group-hover:dark:bg-primary-600">
+        Book a pairing session here ☺️
+      </span>
+    </button>
+  </a>
+</div>
