fix: Change comment to correct syntax

--- a/data/authors/trilliumsmith.mdx
+++ b/data/authors/trilliumsmith.mdx
@@ -10,7 +10,7 @@ linkedin: https://www.linkedin.com/in/trilliumsmith/
 github: 'https://github.com/trillium'
 ---
 
-# This is a duplicate
+{/* Duplicate author */}
 
 Trillium Smith is a self-taught software developer based out of the Los Angeles area, speicalizing in building full stack web applications in React, utilizing resources like Tailwind, NextJs, and Typescript.
 
