chore: Fix some typops

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -10,8 +10,8 @@ linkedin: https://www.linkedin.com/in/trilliumsmith/
 github: 'https://github.com/trillium'
 ---
 
-Trillium Smith is a self-taught software developer based out of the Los Angeles area, speicalizing in building full stack web applications in React, utilizing resources like Tailwind, NextJs, and Typescript.
+Trillium Smith is a self-taught software developer based out of the Los Angeles area, specializing in building full stack web applications in React, utilizing resources like Tailwind, NextJs, and Typescript.
 
 He's the current Lead Developer for VRMS (Volunteer Relationship Management System).
 
-Outside of software development, Trillium is also an accomplished massage therpaist, partner dancer, and crafter of curated dad jokes.
+Outside of software development, Trillium is also an accomplished massage therapist, partner dancer, and crafter of curated dad jokes.
