--- a/data/blog/pairing-magic.mdx
+++ b/data/blog/pairing-magic.mdx
@@ -23,6 +23,9 @@ Looking forward to pairing with you soon!
 
 <div className="grid grid-cols-2 justify-center gap-4 rounded-md border p-4">
   <div className="flex h-full w-auto flex-grow items-center overflow-hidden rounded-md">
+    ![Screenshot of Angelos and Trillium on Google Meet](/static/images/pairamid_scheme/05.webp)
+  </div>
+  <div className="flex h-full w-auto flex-grow items-center overflow-hidden rounded-md">
     ![Screenshot of Sam and Trillium on Google Meet](/static/images/pairamid_scheme/04.webp)
   </div>
   <div className="flex h-full w-auto flex-grow items-center overflow-hidden rounded-md">
